Python: GreasePencil.active does not accept a GPencilLayer, but GreasePencil type?! #42225

Closed
opened 2014-10-14 19:55:12 +02:00 by CodeManX · 7 comments
Member

Blender Version
Broken: 2.72 official

Short description of error
GreasePencil.layers.active should accept GreasePencil.layers- [x], but only GreasePencil itself it accepted.

Exact steps for others to reproduce the error
Select default cube, add two GPencil layers, switch to Scripting view and try the following:

  C.object.grease_pencil.layers.active = C.object.grease_pencil.layers[0] # fails
  C.object.grease_pencil.layers.active = C.object.grease_pencil # succeeds but makes no sense
**Blender Version** Broken: 2.72 official **Short description of error** GreasePencil.layers.active should accept GreasePencil.layers- [x], but only GreasePencil itself it accepted. **Exact steps for others to reproduce the error** Select default cube, add two GPencil layers, switch to Scripting view and try the following: ``` C.object.grease_pencil.layers.active = C.object.grease_pencil.layers[0] # fails ``` ``` C.object.grease_pencil.layers.active = C.object.grease_pencil # succeeds but makes no sense
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @CodeManX

Added subscriber: @CodeManX
Joshua Leung self-assigned this 2014-10-15 01:31:51 +02:00

This issue was referenced by blender/blender@f87d38b5f5

This issue was referenced by blender/blender@f87d38b5f518bb436823b5913db8c1b73a108872
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit blender/blender@f87d38b5f5.

Closed by commit blender/blender@f87d38b5f5.

This issue was referenced by blender/blender@bfde694bd0

This issue was referenced by blender/blender@bfde694bd0a1ee557cb470af89fb866d90d1e29f

Added subscriber: @Grabz

Added subscriber: @Grabz
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#42225
No description provided.